# BspwmStackableWindows

./: Cargo.toml  Makefile  README.md  sample_tree.json
src/: bspwm.rs  client.rs  irspc.rs  json_net.rs  json_socket.rs  main.rs  messages.rs  subprogram.rs
